--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ header h1{font-size:1.4em}
 <p>Cuando un empleado espera su recibo de pago, la mayoría piensa que los datos simplemente aparecen. La realidad es más compleja. En Mi Portal FONE, cada recibo de nómina se genera a partir de múltiples sistemas: la base de datos central de la SEP, registros de asistencia, deducciones fiscales y ajustes de beneficios.</p>
 <p>Por ejemplo, durante un proyecto que lideré en 2021, descubrimos que más del 15% de los errores en recibos provenían de inconsistencias en los registros de días trabajados, algo que ningún tutorial online menciona. Sí, ese "error misterioso" que te hace pensar que tu salario está mal, tiene una raíz muy concreta: datos sin normalizar provenientes de varios sistemas internos.</p>
 <h3>Curiosidad que engancha</h3>
-<p>Sabías que cada recibo tiene <a href="https://mifoneportal.pages.dev/">un identificador</a> único de 22 caracteres, generado automáticamente para evitar duplicados y rastrear cualquier corrección? Este detalle, aunque técnico, explica por qué a veces no puedes ver tu recibo inmediatamente después de un ajuste.</p>
+<p>Sabías que cada recibo tiene <a href="https://mifoneportalmx.pages.dev/">un identificador</a> único de 22 caracteres, generado automáticamente para evitar duplicados y rastrear cualquier corrección? Este detalle, aunque técnico, explica por qué a veces no puedes ver tu recibo inmediatamente después de un ajuste.</p>
 
 <h2 id="seccion2">2. Procesamiento: Cómo Mi Portal FONE convierte datos en recibos</h2>
 <p>Una vez que los datos se recopilan, entran en un proceso de transformación interno. Esto incluye:</p>
